prevent overlapping timeslot

--- a/styles/booking.css
+++ b/styles/booking.css
@@ -155,3 +155,18 @@ body {
 .reschedButton:hover {
     scale: 1.1;
 }
+
+
+
+
+
+.errorMessage {
+    font-size: 1rem;
+    color: rgb(228, 62, 62);
+
+    text-align: center;
+
+    padding: 0;
+    margin: 0;
+    margin-top: 1rem;
+}
